--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/**/workspace.xml
+#.idea/**/workspace.xml
 .idea/**/tasks.xml
-.idea/dictionaries
+#.idea/dictionaries
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
@@ -61,9 +61,10 @@ fabric.properties
 ### Intellij+iml Patch ###
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
+/.idea/
 *.iml
-modules.xml
-.idea/misc.xml
+#modules.xml
+#.idea/misc.xml
 *.ipr
 
 ### Java ###
@@ -125,6 +126,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
 
 
 # End of https://www.gitignore.io/api/git,java,linux,windows,intellij+iml
