--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/git,java,linux,windows,intellij+iml
 /data.tmp
+/.idea/vcs.xml
+src/main/resources/
+target/
