--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/git,java,linux,windows,intellij+iml
 /data.tmp
-src/main/resources/
+# src/main/resources/
 target/
 *.dta
 .idea/vcs.xml
