--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
     <properties>
         <jdk.version>1.8</jdk.version>
         <junit.version>4.12</junit.version>
+        <commons.version>1.1.1</commons.version>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j_api.version>1.7.25</slf4j_api.version>
+        <log4j_adapter.version>1.7.25</log4j_adapter.version>
     </properties>
 
     <build>
@@ -82,6 +86,22 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j_api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${log4j_adapter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
 
     </dependencies>
